# moa

./: .cursorignore  .gitignore  .oxfmtrc.json  .oxfmtrc.jsonc  .oxlintrc.json  .oxlintrc.jsonc  AGENTS.md  CLAUDE.md  README.md  package.json  turbo.json
.claude/: settings.json
.claude/agents/: cleanup-analyzer.md  plan-checker.md  userguide-reviewer.md
.claude/commands/: check.md  cleanup.md
.github/: CODEOWNERS
.github/workflows/: build-app.yml  deploy-app.yml  deploy-landing.yml  release-app.yml  update-homebrew.yml
apps/app/: CLAUDE.md  README.md  confetti.html  index.html  package.json  vite.config.ts
apps/app/src-tauri/: .env.example  Cargo.toml  GoogleService-Info.plist.example  Info.plist  build.rs  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/docs/: macos-fcm.md
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: api_client.rs  auth.rs  bindings.rs  command.rs  fns.rs  lib.rs  main.rs  push_notifications.rs  salary.rs  tray.rs  types.rs
apps/app/src-tauri/src/commands/: app.rs  auth.rs  confetti.rs  menubar.rs  migration.rs  mod.rs  notifications.rs  preferences.rs  quick_pane.rs  recovery.rs  terms.rs  user_settings.rs  workday.rs
apps/app/src-tauri/src/utils/: macos.rs  mod.rs
apps/landing/: CLAUDE.md  README.md  astro.config.mjs  astro.config.ts  package.json  tsconfig.json
docs/: mvp-spec.md  tasks.md
docs/developer/: README.md  architecture-guide.md  cross-platform.md  data-persistence.md  (+16 more)
homebrew/: README.md
scripts/: complete-task.ts  prepare-release.ts  tsconfig.json
(+239 files in other folders)
