[package]
name = "moa"
version = "0.1.0"
description = "A lightweight menu bar/system tray app that visualizes your accumulated salary in real-time"
authors = ["bepyan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Optimize for smaller binary size in release builds
[profile.release]
codegen-units = 1        # Better LLVM optimization (slower build, smaller binary)
lto = true               # Link-time optimizations
opt-level = "s"          # Optimize for size over speed
panic = "abort"          # Don't include panic unwinding code
strip = true             # Remove debug symbols
